--- a/index.html
+++ b/index.html
@@ -1061,6 +1061,26 @@
     <script src="assets/js/vendor/particles.js"></script>
     <!-- main JS -->
     <script src="assets/js/main.js"></script>
+
+    <!-- Bot Integration Script -->
+    <script>
+        !function(e,t,a){
+            var c=e.head||e.getElementsByTagName("head")[0],
+                n=e.createElement("script");
+            n.async=!0;
+            n.defer=!0;
+            n.type="text/javascript";
+            n.src=t+"/static/js/widget.js?config="+JSON.stringify(a);
+            c.appendChild(n);
+        }(document,"https://app.engati.com",{
+            bot_key:"96e644a084fa4ce8",
+            welcome_msg:true,
+            branding_key:"default",
+            server:"https://app.engati.com",
+            e:"p"
+        });
+    </script>
+
 </body>
 
 </html>
